--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,8 +2,10 @@
   --floor-switcher-height: 52px;
   --main-ui-padding: 12px;
   --search-box-height: 58px;
+  --search-icon-width: 64px;
   --search-transition-duration: .3s;
   --toolbar-gap: 8px;
+  --search-width-desktop: 400px;
 }
 
 * {
@@ -24,7 +26,7 @@
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  
+
   /* Disable scrolling and panning */
   touch-action: none;
 
